# Othello-AI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  board.h  dfasdfasdfasdf  engine  engine.cpp  environment.yml  main.py  pyg.spec  rank_history.txt
alphazero_cpu/: board_helper.py  engine.py  multiprocessing_helper.py  simulate_games.py  training_loop.py
alphazero_gpu/: board.py  board_helper.py  engine.py  generate_games.py  globals.py  mcts.py  multiprocessing_helper.py  nn_init.py  reload_model_data.json  simulate_games.py  test.ipynb  test.py  training_helper.py  training_loop.py  training_nnue.py
alphazero_nnue/: board.py  board.py.amltmp  board_helper.py  engine.py  generate_game_helper.py  generate_game_helper.py.amltmp  generate_games.py  globals.py  initialization.py  initialization.py.amltmp  mcts.py  multiprocessing_helper.py  nn.py  nn_init.py  reload_model_data.json  simulate_game_helper.py  simulate_games.py  test.ipynb  test_training.py.ipynb  training.py  training_helper.py  training_loop.py  training_loop.py.amltmp
nnue/: board.cpp  board.h  engine.cpp  experimental_board.cpp  experimental_board.h  game_generation.cpp  global_funcs.cpp  global_funcs.h  globals.cpp  globals.h  load_nnue.cpp  minimax.cpp  minimax.h  plot_nnue.ipynb  quantization_model.ipynb  quantization_test.cpp  quantize_nnue.py  simulate_games.cpp  test_experimental_board.cpp  test_experimental_board.h  test_training.ipynb  training.py
nnue_new/: board.cpp  minimax.cpp  nn_init.py  quantize_nnue.py  simulate_games.cpp
src/: board.cpp  build_game.py  engine.cpp  globals.h  (+3 more)
(+42 files in other folders)
